umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_zinc4235774.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 23
sum_formula: C18N2O2
graph6: UhGGGC@?G?_@?P?G?_G?@??C??G??O??C??AO???
