umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rhea_CHEBI_195187.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 138
bond_count: 152
sum_formula: C61N22O46P7-7
graph6: ~?AIpDH?C@?G_?A????????F??C?_GC_???CC?????????_??@???@??_?_????????????K????G???CG???Q?????@????A???????????@?????A??????_?????G?????H??????_??????G??????G??????C?????@????????O????????????????@?????B????????_??????OG??????Q?????????C??????O???????????????????C????????@?????????G?????????_????????@???????????????????????????A??W?????????@?????????CC????????@G???????????G?????????????????????@?????????_?G????????C?A???????????C???????????@????????????_??????????AG???????????G?????????????????????????G????????????O????????????C????????????@????????????@G????????????C?????????????@?????????????@??????????????_????????????G??????????????A???????????????????????????????????????G????W??????????????C?????????????A@?????????????AO????????????????_????????????A??????????????????????????????????_???????????????O???????????????@????????????????C???????????????@G???????????????@?????????????????C????????????????@?????????????????G????????????????_?????????????????A??????????????????????????????????????????????????A???W?????????????????@?????????????????GC????????????????AO???????????????????G????????????????G????????????????????????????????????????G???????????????????_??????????????????@???????????????????@????????????????????_?????????????????????????????????????????????????????????@??K????????????????????G???????????????????GG???????????????????c?????????????????????@???????????????????????????????????????????_??????????????????C?@???????????????????G?C?????????????????????A??????????????????????G?????????????????????@?????????????????????@C?????????????????????@?
