umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rhea_CHEBI_83071.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 76
bond_count: 83
sum_formula: C33N11O26P4-4
graph6: ~?@KpDH?C@?G_?A????????F??C?_GC_???CC?????????_??@???@??_?_????????????K????G???CG???Q?????@????A???????????@?????A??????_?????G?????H??????_??????G??????G??????C?????@????????O????????????????@?????B????????_??????OG??????Q?????????C??????O???????????????????C????????@?????????G?????????_????????@???????????????????????????A??W?????????@?????????CC????????@G???????????G?????????????????????@?????????_?G????????C?A???????????C???????????@????????????_??????????AG???????????G
