umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_scifinder_Substance_20250901_1052.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 26
sum_formula: C16HO6
graph6: "V???GIC?_C?G?O?K?C??_OA??C`?G??C?O?WA??oG???"
